; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_texture.c_sample_nearest_2d.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_texture.c_sample_nearest_2d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_texture_object = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_texture_object*, i64, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*)* @sample_nearest_2d to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sample_nearest_2d(%struct.gl_texture_object* %0, i64 %1, i32* %2, i32* %3, i32* %4, i32* %5, i32* %6, i32* %7, i32* %8, i32* %9) #0 {
  %11 = alloca %struct.gl_texture_object*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i64, align 8
  store %struct.gl_texture_object* %0, %struct.gl_texture_object** %11, align 8
  store i64 %1, i64* %12, align 8
  store i32* %2, i32** %13, align 8
  store i32* %3, i32** %14, align 8
  store i32* %4, i32** %15, align 8
  store i32* %5, i32** %16, align 8
  store i32* %6, i32** %17, align 8
  store i32* %7, i32** %18, align 8
  store i32* %8, i32** %19, align 8
  store i32* %9, i32** %20, align 8
  store i64 0, i64* %21, align 8
  br label %22

22:                                               ; preds = %54, %10
  %23 = load i64, i64* %21, align 8
  %24 = load i64, i64* %12, align 8
  %25 = icmp ult i64 %23, %24
  br i1 %25, label %26, label %57

26:                                               ; preds = %22
  %27 = load %struct.gl_texture_object*, %struct.gl_texture_object** %11, align 8
  %28 = load %struct.gl_texture_object*, %struct.gl_texture_object** %11, align 8
  %29 = getelementptr inbounds %struct.gl_texture_object, %struct.gl_texture_object* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32*, i32** %13, align 8
  %34 = load i64, i64* %21, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = load i32*, i32** %14, align 8
  %38 = load i64, i64* %21, align 8
  %39 = getelementptr inbounds i32, i32* %37, i64 %38
  %40 = load i32, i32* %39, align 4
  %41 = load i32*, i32** %17, align 8
  %42 = load i64, i64* %21, align 8
  %43 = getelementptr inbounds i32, i32* %41, i64 %42
  %44 = load i32*, i32** %18, align 8
  %45 = load i64, i64* %21, align 8
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  %47 = load i32*, i32** %19, align 8
  %48 = load i64, i64* %21, align 8
  %49 = getelementptr inbounds i32, i32* %47, i64 %48
  %50 = load i32*, i32** %20, align 8
  %51 = load i64, i64* %21, align 8
  %52 = getelementptr inbounds i32, i32* %50, i64 %51
  %53 = call i32 @sample_2d_nearest(%struct.gl_texture_object* %27, i32 %32, i32 %36, i32 %40, i32* %43, i32* %46, i32* %49, i32* %52)
  br label %54

54:                                               ; preds = %26
  %55 = load i64, i64* %21, align 8
  %56 = add i64 %55, 1
  store i64 %56, i64* %21, align 8
  br label %22

57:                                               ; preds = %22
  ret void
}

declare dso_local i32 @sample_2d_nearest(%struct.gl_texture_object*, i32, i32, i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
